Criado através do Colab

--- a/[Imersão_IA_2_edição]_Código_Projeto_HealBot.ipynb
+++ b/[Imersão_IA_2_edição]_Código_Projeto_HealBot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMddCb+50WCUMcXzBtq5Knb",
+      "authorship_tag": "ABX9TyOvGywPTgfM5C+i1MYJ5ilu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,8 +44,8 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY=\"AIzaSyDzMRKGNEtXxzA344lEt2fJ3pX6GEySGWc\"\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get(\"SECRECT_KEY\")\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
@@ -1274,7 +1274,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         },
         "id": "CFYNfuB2VTdL",
         "outputId": "31eb959c-2d01-479e-f109-7b084e91d976"
